tests/checker/bad/lib/BadADTLib3c.scillib
scilla_version 0

library BadADTLib3c

type TestType2 =
| Item1 of Int32
| Item5
